--- a/notebooks/401-object-detection-webcam/401-object-detection.ipynb
+++ b/notebooks/401-object-detection-webcam/401-object-detection.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -57,19 +57,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "################|| Downloading ssd_mobilenet_v2_coco ||################\n",
+      "\n",
+      "========== Downloading model/public/ssd_mobilenet_v2_coco/ssd_mobilenet_v2_coco.tar.gz\n",
+      "... 100%, 183521 KB, 11188 KB/s, 16 seconds passed\n",
+      "\n",
+      "========== Unpacking model/public/ssd_mobilenet_v2_coco/ssd_mobilenet_v2_coco.tar.gz\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# directory where model will be downloaded\n",
     "base_model_dir = \"model\"\n",
     "\n",
     "# model name as named in Open Model Zoo\n",
     "model_name = \"ssdlite_mobilenet_v2\"\n",
+    "# model_name = \"ssd_mobilenet_v2_coco\"\n",
     "\n",
     "download_command = f\"omz_downloader \" \\\n",
     "                   f\"--name {model_name} \" \\\n",
@@ -94,13 +109,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "========== Converting ssd_mobilenet_v2_coco to IR (FP16)\n",
+      "Conversion command: /home/karol/anaconda3/bin/python -m mo --framework=tf --data_type=FP16 --output_dir=model/public/ssd_mobilenet_v2_coco/FP16 --model_name=ssd_mobilenet_v2_coco --reverse_input_channels '--input_shape=[1,300,300,3]' --input=image_tensor --transformations_config=/home/karol/anaconda3/lib/python3.7/site-packages/mo/extensions/front/tf/ssd_v2_support.json --tensorflow_object_detection_api_pipeline_config=model/public/ssd_mobilenet_v2_coco/ssd_mobilenet_v2_coco_2018_03_29/pipeline.config --output=detection_classes,detection_scores,detection_boxes,num_detections --input_model=model/public/ssd_mobilenet_v2_coco/ssd_mobilenet_v2_coco_2018_03_29/frozen_inference_graph.pb\n",
+      "\n",
+      "Model Optimizer arguments:\n",
+      "Common parameters:\n",
+      "\t- Path to the Input Model: \t/home/karol/projects/object-detection/openvino_notebooks/notebooks/401-object-detection-webcam/model/public/ssd_mobilenet_v2_coco/ssd_mobilenet_v2_coco_2018_03_29/frozen_inference_graph.pb\n",
+      "\t- Path for generated IR: \t/home/karol/projects/object-detection/openvino_notebooks/notebooks/401-object-detection-webcam/model/public/ssd_mobilenet_v2_coco/FP16\n",
+      "\t- IR output name: \tssd_mobilenet_v2_coco\n",
+      "\t- Log level: \tERROR\n",
+      "\t- Batch: \tNot specified, inherited from the model\n",
+      "\t- Input layers: \timage_tensor\n",
+      "\t- Output layers: \tdetection_classes,detection_scores,detection_boxes,num_detections\n",
+      "\t- Input shapes: \t[1,300,300,3]\n",
+      "\t- Mean values: \tNot specified\n",
+      "\t- Scale values: \tNot specified\n",
+      "\t- Scale factor: \tNot specified\n",
+      "\t- Precision of IR: \tFP16\n",
+      "\t- Enable fusing: \tTrue\n",
+      "\t- Enable grouped convolutions fusing: \tTrue\n",
+      "\t- Move mean values to preprocess section: \tNone\n",
+      "\t- Reverse input channels: \tTrue\n",
+      "TensorFlow specific parameters:\n",
+      "\t- Input model in text protobuf format: \tFalse\n",
+      "\t- Path to model dump for TensorBoard: \tNone\n",
+      "\t- List of shared libraries with TensorFlow custom layers implementation: \tNone\n",
+      "\t- Update the configuration file with input/output node names: \tNone\n",
+      "\t- Use configuration file used to generate the model with Object Detection API: \t/home/karol/projects/object-detection/openvino_notebooks/notebooks/401-object-detection-webcam/model/public/ssd_mobilenet_v2_coco/ssd_mobilenet_v2_coco_2018_03_29/pipeline.config\n",
+      "\t- Use the config file: \tNone\n",
+      "\t- Inference Engine found in: \t/home/karol/anaconda3/lib/python3.7/site-packages/openvino\n",
+      "Inference Engine version: \t2021.4.2-3976-0943ed67223-refs/pull/539/head\n",
+      "Model Optimizer version: \t2021.4.2-3976-0943ed67223-refs/pull/539/head\n",
+      "/home/karol/anaconda3/lib/python3.7/site-packages/tensorflow/python/autograph/impl/api.py:22: DeprecationWarning: the imp module is deprecated in favour of importlib; see the module's documentation for alternative uses\n",
+      "  import imp\n",
+      "The Preprocessor block has been removed. Only nodes performing mean value subtraction and scaling (if applicable) are kept.\n",
+      "[ SUCCESS ] Generated IR version 10 model.\n",
+      "[ SUCCESS ] XML file: /home/karol/projects/object-detection/openvino_notebooks/notebooks/401-object-detection-webcam/model/public/ssd_mobilenet_v2_coco/FP16/ssd_mobilenet_v2_coco.xml\n",
+      "[ SUCCESS ] BIN file: /home/karol/projects/object-detection/openvino_notebooks/notebooks/401-object-detection-webcam/model/public/ssd_mobilenet_v2_coco/FP16/ssd_mobilenet_v2_coco.bin\n",
+      "[ SUCCESS ] Total execution time: 55.20 seconds. \n",
+      "[ SUCCESS ] Memory consumed: 757 MB. \n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "precision = \"FP16\"\n",
     "\n",
@@ -130,7 +192,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -163,13 +225,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('image_tensor', 'DetectionOutput')"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "input_key, output_key"
    ]
@@ -191,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -221,7 +294,8 @@
     "    src=np.arange(0, 255, 255 / len(classes), dtype=np.float32).astype(np.uint8),\n",
     "    colormap=cv2.COLORMAP_RAINBOW\n",
     ").squeeze()\n",
-    "\n",
+    "np.random.seed(42)\n",
+    "np.random.shuffle(colors)\n",
     "\n",
     "def process_results(frame, results, thresh=0.6):\n",
     "    # size of the original frame\n",
@@ -255,9 +329,12 @@
     "        # choose color for the label\n",
     "        color = tuple(map(int, colors[label]))\n",
     "        # draw box\n",
-    "        cv2.rectangle(img=frame, pt1=box[:2], pt2=box[2:], color=color, thickness=3)\n",
+    "        cv2.rectangle(img=frame, pt1=box[:2], pt2=box[2:], color=color, thickness=2)\n",
     "        # draw label name inside the box\n",
-    "        cv2.putText(img=frame, text=f\"{classes[label]}\", org=(box[0] + 10, box[1] + 30),\n",
+    "        cv2.putText(img=frame, text=f\"{classes[label]} %.1f%%\"%(100*score), org=(box[0] + 10, box[1] + 30),\n",
+    "                    fontFace=cv2.FONT_HERSHEY_COMPLEX, fontScale=frame.shape[1] / 1000, color=[0,0,0],\n",
+    "                    thickness=6, lineType=cv2.LINE_AA)\n",
+    "        cv2.putText(img=frame, text=f\"{classes[label]} %.1f%%\"%(100*score), org=(box[0] + 10, box[1] + 30),\n",
     "                    fontFace=cv2.FONT_HERSHEY_COMPLEX, fontScale=frame.shape[1] / 1000, color=color,\n",
     "                    thickness=1, lineType=cv2.LINE_AA)\n",
     "\n",
@@ -275,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -284,20 +361,28 @@
    "outputs": [],
    "source": [
     "# main processing function to run object detection\n",
-    "def run_object_detection(source=0, flip=False, use_popup=False):\n",
+    "def run_object_detection(source=0, flip=False, use_popup=False, threshold=0.3):\n",
     "    # create video player to play with target fps\n",
-    "    player = utils.VideoPlayer(source=source, flip=flip, fps=30)\n",
+    "#     player = utils.VideoPlayer(source=source, flip=flip, fps=1)\n",
     "    # start capturing\n",
-    "    player.start()\n",
+    "    \n",
+    "    counter=0\n",
+    "    \n",
+    "#     player.start()\n",
     "    try:\n",
     "        if use_popup:\n",
     "            title = \"Press ESC to Exit\"\n",
     "            cv2.namedWindow(winname=title, flags=cv2.WINDOW_GUI_NORMAL | cv2.WINDOW_AUTOSIZE)\n",
     "\n",
     "        processing_times = collections.deque()\n",
+    "        \n",
+    "        cap = cv2.VideoCapture(source)\n",
+    "        \n",
     "        while True:\n",
     "            # grab the frame\n",
-    "            frame = player.next()\n",
+    "#             frame = player.next()\n",
+    "            ret, frame = cap.read()\n",
+    "\n",
     "            if frame is None:\n",
     "                print(\"Source ended\")\n",
     "                break\n",
@@ -318,7 +403,7 @@
     "            results = exec_net.infer(inputs={input_key: input_img})\n",
     "            stop_time = time.time()\n",
     "            # get poses from network results\n",
-    "            boxes = process_results(frame=frame, results=results)\n",
+    "            boxes = process_results(frame=frame, results=results, thresh=threshold)\n",
     "\n",
     "            # draw boxes on a frame\n",
     "            frame = draw_boxes(frame=frame, boxes=boxes)\n",
@@ -332,13 +417,31 @@
     "            # mean processing time [ms]\n",
     "            processing_time = np.mean(processing_times) * 1000\n",
     "            fps = 1000 / processing_time\n",
-    "            cv2.putText(img=frame, text=f\"Inference time: {processing_time:.1f}ms ({fps:.1f} FPS)\", org=(20, 40),\n",
-    "                        fontFace=cv2.FONT_HERSHEY_COMPLEX, fontScale=f_width / 1000,\n",
-    "                        color=(0, 0, 255), thickness=1, lineType=cv2.LINE_AA)\n",
+    "            cv2.putText(img=frame, text=' OpenVINO @ Intel Core i7-9750H CPU @ 2.60GHz x 12 ', org=(20, 40),\n",
+    "                        fontFace=cv2.FONT_HERSHEY_COMPLEX, fontScale=1,\n",
+    "                        color=(0, 0, 0), thickness=6, lineType=cv2.LINE_AA)\n",
+    "            cv2.putText(img=frame, text=' '+model_name+' FP16 @ %dx%d'%(width, height), org=(20, 80),\n",
+    "                        fontFace=cv2.FONT_HERSHEY_COMPLEX, fontScale=1,\n",
+    "                        color=(0, 0, 0), thickness=6, lineType=cv2.LINE_AA)\n",
+    "            cv2.putText(img=frame, text=f\" Inference time: {processing_time:.1f}ms ({fps:.1f} FPS) threshold={threshold:.1f}\", org=(20, 120),\n",
+    "                        fontFace=cv2.FONT_HERSHEY_COMPLEX, fontScale=1,\n",
+    "                        color=(0, 0, 0), thickness=6, lineType=cv2.LINE_AA)\n",
+    "            \n",
+    "            cv2.putText(img=frame, text=' OpenVINO @ Intel Core i7-9750H CPU @ 2.60GHz x 12 ', org=(20, 40),\n",
+    "                        fontFace=cv2.FONT_HERSHEY_COMPLEX, fontScale=1,\n",
+    "                        color=(255, 255, 255), thickness=1, lineType=cv2.LINE_AA)\n",
+    "            cv2.putText(img=frame, text=' '+model_name+' FP16 @ %dx%d'%(width, height), org=(20, 80),\n",
+    "                        fontFace=cv2.FONT_HERSHEY_COMPLEX, fontScale=1,\n",
+    "                        color=(255, 255, 255), thickness=1, lineType=cv2.LINE_AA)\n",
+    "            cv2.putText(img=frame, text=f\" Inference time: {processing_time:.1f}ms ({fps:.1f} FPS) threshold={threshold:.1f}\", org=(20, 120),\n",
+    "                        fontFace=cv2.FONT_HERSHEY_COMPLEX, fontScale=1,\n",
+    "                        color=(255, 255, 255), thickness=1, lineType=cv2.LINE_AA)\n",
     "\n",
     "            # use this workaround if there is flickering\n",
     "            if use_popup:\n",
     "                cv2.imshow(winname=title, mat=frame)\n",
+    "                cv2.imwrite('/tmp/aa/%08d.jpg'%counter,frame)\n",
+    "                counter+=1\n",
     "                key = cv2.waitKey(1)\n",
     "                # escape = 27\n",
     "                if key == 27:\n",
@@ -360,7 +463,7 @@
     "        print(e)\n",
     "    finally:\n",
     "        # stop capturing\n",
-    "        player.stop()\n",
+    "#         player.stop()\n",
     "        if use_popup:\n",
     "            cv2.destroyAllWindows()"
    ]
@@ -378,7 +481,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -386,7 +489,7 @@
    },
    "outputs": [],
    "source": [
-    "run_object_detection(source=0, flip=True, use_popup=False)"
+    "run_object_detection(source=0, flip=False, use_popup=True, threshold=0.1)"
    ]
   },
   {
@@ -400,23 +503,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Source ended\n"
+     ]
+    }
+   ],
    "source": [
     "video_file = \"../201-vision-monodepth/data/Coco Walking in Berkeley.mp4\"\n",
+    "# video_file = \"0002-20170519-2.mp4\"\n",
     "\n",
-    "run_object_detection(source=video_file, flip=False, use_popup=False)"
+    "run_object_detection(source=video_file, flip=False, use_popup=True, threshold=0.2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false,
     "pycharm": {
      "name": "#%% md\n"
     }
@@ -446,7 +557,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
